--- a/FakeISG/src/main/resources/ISG/Diagnose/Anlage.html
+++ b/FakeISG/src/main/resources/ISG/Diagnose/Anlage.html
@@ -11,48 +11,48 @@
   
   <link rel="shortcut icon" href="http://192.168.178.76/pics/brlogo.ico">
   <!-- does not exist link rel="stylesheet" href="./css/netzwerk.css" type="text/css" media="all" /-->
-  <link rel="stylesheet" type="text/css" href="./STIEBEL ELTRON Reglersteuerung_DA_files/ste_slider.css">	
+  <link rel="stylesheet" type="text/css" href="./Anlage_files/ste_slider.css">	
 	<!-- Blueprint CSS framework -->
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/print.css" type="text/css" media="print">	
+	<link rel="stylesheet" href="./Anlage_files/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="./Anlage_files/print.css" type="text/css" media="print">	
 	<!--[if lt IE 8]><link rel="stylesheet" href="./css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
 	
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/layout.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/layout.css" type="text/css" media="all">
   	
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr.css" type="text/css" media="all">
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/thickbox.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/sifr.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/thickbox.css" type="text/css" media="all">
 	
-	<link rel="stylesheet" type="text/css" href="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.jqplot.min.css">
+	<link rel="stylesheet" type="text/css" href="./Anlage_files/jquery.jqplot.min.css">
 	
 	  
   	
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.min.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/thickbox.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr_sw.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/scripts.js"></script>
-  <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/json2.js"></script>
-  <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery-ui-1.8.6.custom.min.js"></script>
-    <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/setDNS1.js"></script>
+	<script type="text/javascript" src="./Anlage_files/jquery.min.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/thickbox.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/sifr.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/sifr_sw.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/scripts.js.Download"></script>
+  <script type="text/javascript" src="./Anlage_files/json2.js.Download"></script>
+  <script type="text/javascript" src="./Anlage_files/jquery-ui-1.8.6.custom.min.js.Download"></script>
+    <script type="text/javascript" src="./Anlage_files/setDNS1.js.Download"></script>
 
 	<!-- [if IE] -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/excanvas.min.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/excanvas.min.js.Download"></script>
 	<!-- [endif] -->
 
 	<!-- for dateAxisRenderer.js -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/Date.min.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/Date.min.js.Download"></script>
 	<!-- BEGIN: load jqplot -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.jqplot.min.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.dateAxisRenderer.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.barRenderer.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.categoryAxisRenderer.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.jqplot.min.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.dateAxisRenderer.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.barRenderer.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.categoryAxisRenderer.js.Download"></script>
 	<!-- END: load jqplot -->
   
   <!-- BEGIN: load slider -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.core.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.widget.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.mouse.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.slider.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.core.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.widget.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.mouse.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.slider.js.Download"></script>
 	<!-- END: load slider -->
   
     
@@ -71,7 +71,7 @@
     <div id="Uhrzeit"></div>
 		<div class="title">
       <a href="http://192.168.178.76/" onclick="return checkChanges(this);" title="zur Startseite">
-        <img src="./STIEBEL ELTRON Reglersteuerung_DA_files/title.png" alt="Servicewelt">
+        <img src="./Anlage_files/title.png" alt="Servicewelt">
 		
       </a>
             <div style="position: relative; color: #97B765; font-weight: 900; margin: 18px 0px 0px 323px;"></div>
@@ -218,17 +218,13 @@
 </div>
 <div class="clear"></div></div>
         <form id="werte" action="http://192.168.178.76/?s=2,0#" onsubmit="saveValues(this);return false;"><div id="content">
-    <div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">BETRIEBSSTATUS</th></tr>
-    <tr class="even">
-        <td class="key">HEIZKREIS 1 PUMPE</td>
-        <td class="value"><img height="15" src="./STIEBEL ELTRON Reglersteuerung_DS_files/ste-symbol_an-97b765.png"> </td>
-    </tr>
-    </tbody></table></div><div class="span-11 prepend-1" style="float:right"><table class="info"><tbody><tr><th colspan="2" class="round-top">STATUS</th></tr></tr>  <tr class="even">
+    <div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">BETRIEBSSTATUS</th></tr></tbody></table></div><div class="span-11 prepend-1" style="float:right"><table class="info"><tbody><tr><th colspan="2" class="round-top">STATUS</th></tr>  <tr class="even">
     <td class="key">HEIZKREISPUMPE</td>
-    <td class="value"><img height="15" src="./STIEBEL ELTRON Reglersteuerung_DA_files/ste-symbol_an-97b765.png"> </td>
-  </tr></tbody></table></div><div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">RESTSTILLSTAND</th></tr>  <tr class="even">
+    <td class="value"><img height="15" src="./Anlage_files/ste-symbol_an-97b765.png"> </td>
+  </tr>
+</tbody></table></div><div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">RESTSTILLSTAND</th></tr>  <tr class="even">
     <td class="key round-leftbottom">RESTSTILLSTAND</td>
-    <td class="value round-rightbottom">0 min</td>
+    <td class="value round-rightbottom">28 min</td>
   </tr>
 </tbody></table></div><div class="span-24">&nbsp;</div>
     </div>  </form></div>
@@ -256,7 +252,7 @@
 		<div class="span-8 prepend-top" style="height:145px">
 						<div class="span-3">
 			
-				<img src="./STIEBEL ELTRON Reglersteuerung_DA_files/ste_footer_website.png">
+				<img src="./Anlage_files/ste_footer_website.png">
 			</div>
 			<div class="span-5 last">
 				<p>
@@ -269,7 +265,7 @@
     		<div class="bordered span-1"></div>
 		<div class="span-6 prepend-top">
 			<div class="span-2">
-			  <img src="./STIEBEL ELTRON Reglersteuerung_DA_files/footer_tel.png">
+			  <img src="./Anlage_files/footer_tel.png">
 			</div>
 			<div class="span-4 last">
 				<p>
