--- a/FakeISG/src/main/resources/ISG/Info/Anlage.html
+++ b/FakeISG/src/main/resources/ISG/Info/Anlage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!-- saved from url=(0028)http://192.168.178.76/?s=2,0 -->
+<!-- saved from url=(0028)http://192.168.178.76/?s=1,0 -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>STIEBEL ELTRON Reglersteuerung</title>
 	
@@ -11,48 +11,48 @@
   
   <link rel="shortcut icon" href="http://192.168.178.76/pics/brlogo.ico">
   <!-- does not exist link rel="stylesheet" href="./css/netzwerk.css" type="text/css" media="all" /-->
-  <link rel="stylesheet" type="text/css" href="./STIEBEL ELTRON Reglersteuerung_DA_files/ste_slider.css">	
+  <link rel="stylesheet" type="text/css" href="./Anlage_files/ste_slider.css">	
 	<!-- Blueprint CSS framework -->
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/screen.css" type="text/css" media="screen, projection">
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/print.css" type="text/css" media="print">	
+	<link rel="stylesheet" href="./Anlage_files/screen.css" type="text/css" media="screen, projection">
+	<link rel="stylesheet" href="./Anlage_files/print.css" type="text/css" media="print">	
 	<!--[if lt IE 8]><link rel="stylesheet" href="./css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
 	
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/layout.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/layout.css" type="text/css" media="all">
   	
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr.css" type="text/css" media="all">
-	<link rel="stylesheet" href="./STIEBEL ELTRON Reglersteuerung_DA_files/thickbox.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/sifr.css" type="text/css" media="all">
+	<link rel="stylesheet" href="./Anlage_files/thickbox.css" type="text/css" media="all">
 	
-	<link rel="stylesheet" type="text/css" href="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.jqplot.min.css">
+	<link rel="stylesheet" type="text/css" href="./Anlage_files/jquery.jqplot.min.css">
 	
 	  
   	
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.min.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/thickbox.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/sifr_sw.js"></script>
-	<script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/scripts.js"></script>
-  <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/json2.js"></script>
-  <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery-ui-1.8.6.custom.min.js"></script>
-    <script type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/setDNS1.js"></script>
+	<script type="text/javascript" src="./Anlage_files/jquery.min.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/thickbox.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/sifr.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/sifr_sw.js.Download"></script>
+	<script type="text/javascript" src="./Anlage_files/scripts.js.Download"></script>
+  <script type="text/javascript" src="./Anlage_files/json2.js.Download"></script>
+  <script type="text/javascript" src="./Anlage_files/jquery-ui-1.8.6.custom.min.js.Download"></script>
+    <script type="text/javascript" src="./Anlage_files/setDNS1.js.Download"></script>
 
 	<!-- [if IE] -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/excanvas.min.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/excanvas.min.js.Download"></script>
 	<!-- [endif] -->
 
 	<!-- for dateAxisRenderer.js -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/Date.min.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/Date.min.js.Download"></script>
 	<!-- BEGIN: load jqplot -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.jqplot.min.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.dateAxisRenderer.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.barRenderer.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jqplot.categoryAxisRenderer.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.jqplot.min.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.dateAxisRenderer.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.barRenderer.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jqplot.categoryAxisRenderer.js.Download"></script>
 	<!-- END: load jqplot -->
   
   <!-- BEGIN: load slider -->
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.core.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.widget.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.mouse.js"></script>
-	<script language="javascript" type="text/javascript" src="./STIEBEL ELTRON Reglersteuerung_DA_files/jquery.ui.slider.js"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.core.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.widget.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.mouse.js.Download"></script>
+	<script language="javascript" type="text/javascript" src="./Anlage_files/jquery.ui.slider.js.Download"></script>
 	<!-- END: load slider -->
   
     
@@ -71,7 +71,7 @@
     <div id="Uhrzeit"></div>
 		<div class="title">
       <a href="http://192.168.178.76/" onclick="return checkChanges(this);" title="zur Startseite">
-        <img src="./STIEBEL ELTRON Reglersteuerung_DA_files/title.png" alt="Servicewelt">
+        <img src="./Anlage_files/title.png" alt="Servicewelt">
 		
       </a>
             <div style="position: relative; color: #97B765; font-weight: 900; margin: 18px 0px 0px 323px;"></div>
@@ -217,18 +217,74 @@
 <div class="span-15 last">
 </div>
 <div class="clear"></div></div>
-        <form id="werte" action="http://192.168.178.76/?s=2,0#" onsubmit="saveValues(this);return false;"><div id="content">
-    <div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">BETRIEBSSTATUS</th></tr>
-    <tr class="even">
-        <td class="key">HEIZKREIS 1 PUMPE</td>
-        <td class="value"><img height="15" src="./STIEBEL ELTRON Reglersteuerung_DS_files/ste-symbol_an-97b765.png"> </td>
-    </tr>
-    </tbody></table></div><div class="span-11 prepend-1" style="float:right"><table class="info"><tbody><tr><th colspan="2" class="round-top">STATUS</th></tr></tr>  <tr class="even">
-    <td class="key">HEIZKREISPUMPE</td>
-    <td class="value"><img height="15" src="./STIEBEL ELTRON Reglersteuerung_DA_files/ste-symbol_an-97b765.png"> </td>
-  </tr></tbody></table></div><div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">RESTSTILLSTAND</th></tr>  <tr class="even">
-    <td class="key round-leftbottom">RESTSTILLSTAND</td>
-    <td class="value round-rightbottom">0 min</td>
+        <form id="werte" action="http://192.168.178.76/?s=1,0#" onsubmit="saveValues(this);return false;"><div id="content">
+    <div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">RAUMTEMPERATUR</th></tr>  <tr class="even">
+    <td class="key">ISTTEMPERATUR FEK</td>
+    <td class="value">20,6 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">SOLLTEMPERATUR FEK</td>
+    <td class="value">20,2 °C</td>
+  </tr>
+  <tr class="even">
+    <td class="key">RAUMFEUCHTE</td>
+    <td class="value">54,4 %</td>
+  </tr>
+  <tr class="odd">
+    <td class="key round-leftbottom">TAUPUNKTTEMPERATUR</td>
+    <td class="value round-rightbottom">11,1 °C</td>
+  </tr>
+</tbody></table></div><div class="span-11 prepend-1" style="float:right"><table class="info"><tbody><tr><th colspan="2" class="round-top">HEIZUNG</th></tr>  <tr class="even">
+    <td class="key">AUSSENTEMPERATUR</td>
+    <td class="value">2,5 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">ISTTEMPERATUR HK 1</td>
+    <td class="value">29,3 °C</td>
+  </tr>
+  <tr class="even">
+    <td class="key">SOLLTEMPERATUR HK 1</td>
+    <td class="value">28,4 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">VORLAUFISTTEMPERATUR WP</td>
+    <td class="value">35,1 °C</td>
+  </tr>
+  <tr class="even">
+    <td class="key">VORLAUFISTTEMPERATUR NHZ</td>
+    <td class="value">36,2 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">RÜCKLAUFISTTEMPERATUR</td>
+    <td class="value">30,9 °C</td>
+  </tr>
+  <tr class="even">
+    <td class="key">PUFFERISTTEMPERATUR</td>
+    <td class="value">29,3 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">PUFFERSOLLTEMPERATUR</td>
+    <td class="value">28,4 °C</td>
+  </tr>
+  <tr class="even">
+    <td class="key">HEIZUNGSDRUCK</td>
+    <td class="value">1,76 bar</td>
+  </tr>
+  <tr class="odd">
+    <td class="key">VOLUMENSTROM</td>
+    <td class="value">0,00 l/min</td>
+  </tr>
+  <tr class="even">
+    <td class="key round-leftbottom">ANLAGENFROST</td>
+    <td class="value round-rightbottom">4,0 °C</td>
+  </tr>
+</tbody></table></div><div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">ENERGIEMANAGEMENT</th></tr></tbody></table></div><div class="span-11 append-1" style="float:left"><table class="info"><tbody><tr><th colspan="2" class="round-top">QUELLE</th></tr>  <tr class="even">
+    <td class="key">QUELLENTEMPERATUR</td>
+    <td class="value">-1,4 °C</td>
+  </tr>
+  <tr class="odd">
+    <td class="key round-leftbottom">QUELLENDRUCK</td>
+    <td class="value round-rightbottom">1,48 bar</td>
   </tr>
 </tbody></table></div><div class="span-24">&nbsp;</div>
     </div>  </form></div>
@@ -256,7 +312,7 @@
 		<div class="span-8 prepend-top" style="height:145px">
 						<div class="span-3">
 			
-				<img src="./STIEBEL ELTRON Reglersteuerung_DA_files/ste_footer_website.png">
+				<img src="./Anlage_files/ste_footer_website.png">
 			</div>
 			<div class="span-5 last">
 				<p>
@@ -269,7 +325,7 @@
     		<div class="bordered span-1"></div>
 		<div class="span-6 prepend-top">
 			<div class="span-2">
-			  <img src="./STIEBEL ELTRON Reglersteuerung_DA_files/footer_tel.png">
+			  <img src="./Anlage_files/footer_tel.png">
 			</div>
 			<div class="span-4 last">
 				<p>
